<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/whiteBack"
    tools:context=".FazerComprasActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="9"
        android:gravity="center">
        <Button
            android:id="@+id/btn_verLista_FazerCompras"
            android:textAllCaps="false"
            android:textSize="16dp"
            android:background="@color/Orange"
            android:layout_width="300sp"
            android:layout_height="100sp"
            android:text="@string/fazerCompras_tvVerLista"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingBottom="15sp"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:id="@+id/tv_nomeSupermercado_fazerCompras"
            android:textSize="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20sp"
            android:layout_marginBottom="40sp"
            android:text="@string/fazerCompras_tvNomeSupermercado"/>
        <ImageView
            android:src="@drawable/maps"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginBottom="15dp"/>
        <Button
            android:id="@+id/btn_calcRota_fazerCompras"
            android:textAllCaps="false"
            android:textSize="16dp"
            android:background="@color/Blue"
            android:layout_width="300sp"
            android:layout_height="80sp"
            android:text="@string/fazerCompras_btnCalcularRota"/>
    </LinearLayout>
</LinearLayout>
